--- a/.classpath
+++ b/.classpath
@@ -1,12 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-<<<<<<< HEAD
-	<classpathentry kind="lib" path="/export/home/f11/hinsonjl/workspace/jpct/lib/lwjgl-2.9.1/jar/lwjgl.jar"/>
-	<classpathentry kind="lib" path="/export/home/f11/hinsonjl/workspace/jpct/lib/lwjgl-2.9.1/jar/lwjgl_util.jar"/>
-	<classpathentry kind="lib" path="/export/home/f11/hinsonjl/workspace/jpct/lib/jpct/jpct.jar"/>
-=======
->>>>>>> ef1069fb7b5369fc6d601b94c5d491e22dc3c371
+	<classpathentry kind="src" path=""/>
+	<classpathentry kind="lib" path="C:/Users/Shrum/Desktop/Folder Folder/jars/jpct/lib/jpct/jpct.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
