--- a/.classpath
+++ b/.classpath
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path=""/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="C:/Users/Kit/Desktop/jpct/lib/jpct/jpct.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Kit/Desktop/jpct/lib/lwjgl-2.9.1/jar/lwjgl.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Kit/Desktop/jpct/lib/lwjgl-2.9.1/jar/lwjgl_util.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry kind="lib" path="/export/home/f12/arjmandibs/git/3D-Game-of-Life/RESOURCES/jpct.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
