--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,7 @@
 	<classpathentry kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="/export/home/f12/arjmandibs/git/3D-Game-of-Life/RESOURCES/jpct.jar"/>
+	<classpathentry kind="lib" path="/export/home/f12/arjmandibs/git/3D-Game-of-Life/RESOURCES/lwjgl.jar"/>
+	<classpathentry kind="lib" path="/export/home/f12/arjmandibs/git/3D-Game-of-Life/RESOURCES/lwjgl_util.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
