--- a/.classpath
+++ b/.classpath
@@ -2,9 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="C:/Users/Ian/Desktop/Folder Folder/jars/jpct/lib/lwjgl-2.9.1/jar/lwjgl_util.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Ian/Desktop/Folder Folder/jars/jpct/lib/lwjgl-2.9.1/jar/lwjgl.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Ian/Desktop/Folder Folder/jars/jpct/lib/jpct/jpct.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="/export/home/s13/andersonch/git/3D-Game-of-Life/RESOURCES/jpct.jar"/>
+	<classpathentry kind="lib" path="/export/home/s13/andersonch/git/3D-Game-of-Life/RESOURCES/lwjgl.jar"/>
+	<classpathentry kind="lib" path="/export/home/s13/andersonch/git/3D-Game-of-Life/RESOURCES/lwjgl_util.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
