--- a/.classpath
+++ b/.classpath
@@ -7,7 +7,7 @@
 	<classpathentry kind="lib" path="RESOURCES/lwjgl_util.jar"/>
 	<classpathentry kind="lib" path="RESOURCES/lwjgl.jar">
 		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="/export/home/f12/arjmandibs/git/3D-Game-of-Life/RESOURCES/native/linux"/>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="C:/Users/Hunter/git/3D-Game-of-Life/RESOURCES/native/windows"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
