--- a/.classpath
+++ b/.classpath
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path=""/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="/export/home/f11/hinsonjl/workspace/jpct/lib/jpct/jpct.jar"/>
-	<classpathentry kind="lib" path="/export/home/f11/hinsonjl/workspace/jpct/lib/lwjgl-2.9.1/jar/lwjgl.jar">
+	<classpathentry kind="src" path="">
 		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="3D-Game-of-Life/RESOURCES/native/linux"/>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="/export/home/f12/shrumip/git/3D-Game-of-Life/RESOURCES/native/linux"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/export/home/f11/hinsonjl/workspace/jpct/lib/lwjgl-2.9.1/jar/lwjgl_util.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="RESOURCES/lwjgl_util.jar"/>
+	<classpathentry kind="lib" path="RESOURCES/lwjgl.jar"/>
+	<classpathentry kind="lib" path="RESOURCES/jpct.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
