platform non-specific fix

--- a/.classpath
+++ b/.classpath
@@ -12,7 +12,11 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="RESOURCES/lwjgl_util.jar"/>
-	<classpathentry kind="lib" path="RESOURCES/lwjgl.jar"/>
+	<classpathentry kind="lib" path="RESOURCES/lwjgl.jar">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="3D-Game-of-Life/RESOURCES/native/multiPlatform"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="RESOURCES/jpct.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
